network_policies/networkpolicy_AllowAll.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-allowall
  namespace: whizspace
spec:
  podSelector:
    {}
  policyTypes:
  - Ingress
  ingress:
  - {}
