network_policies/networkpolicy_DenyAll.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-denyall
  namespace: whizspace
spec:
  podSelector:
    {}
  policyTypes:
  - Ingress
  ingress:
    []
